--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Soma dos Inversos</title>
+  <title>Link pdf</title>
   <link href="assets/stylesheet/reset.css" rel="stylesheet">
   <link href="assets/stylesheet/style.css" rel="stylesheet">
 </head>
@@ -13,9 +13,9 @@
   
   <img src="assets/imagens/logo.png" class="logo">
   
-  <h1>Klaus e Bruno - Disciplina Integração de Sistemas para Automação</h1>
+  <h1>Klaus Dieter Kupper e Bruno Mafra Pelence - Disciplina Integração de Sistemas para Automação</h1>
   
-  <button class ="button green" onclick="getStatus()">
+  <button class ="button green" onclick="mostraResposta()">
     <h1><a href="https://github.com/Klausdk1999/somaDosInversosAPI/blob/main/planodeensino.pdf">PDF plano de ensino</a></h1>
   </button>
   
